Fixed new controller style
